# data-ingestion

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DUPLICATE_DIAGNOSIS.md  OPERATIONS_RUNBOOK.md  PRODUCTION_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  README.md  SUPABASE_DEPLOYMENT_OPTIONS.md  SUPABASE_QUICK_START.md  SUPABASE_SETUP_GUIDE.md  TROUBLESHOOTING.md  backup_before_dedupe.dump  check_duplicates.py  pyproject.toml  requirements.txt  verify_schema.py
.cursor/rules/: specify-rules.mdc
.github/agents/: copilot-instructions.md
.github/workflows/: dashboard-ci.yml  ingest-meetings.yml
backend/: __init__.py  requirements.txt
backend/app/: main.py
deploy/dashboard/: Dockerfile  docker-compose.yml
docs/: README.md
docs/archive/: data-structure-analysis.json
docs/deployment/: supabase-quickstart.md
docs/operations/: duplicate-diagnosis.md  ingestion-dashboard-runbook.md  runbook.md  troubleshooting.md
frontend/web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
scripts/: check_constraints_and_duplicates.py  check_duplicates.py  dedupe_meetings.README.md  dedupe_meetings_preview.sql  dedupe_meetings_run.sql  find_duplicates.sql  find_missing_meetings.py  run_migration.py  setup_dashboard_dev_db.sh  setup_db.sh  setup_db.sql  verify_schema.py
scripts/docker/: Dockerfile  docker-compose.yml
specs/001-meeting-summaries-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-include-historic-data/: spec.md
src/: __init__.py
tests/: README.md  conftest.py
(+79 files in other folders)
